index.html changed image source

--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@ scale=1.0">
 		<section>
 			<h2>Featured Recipes</h2>
 			<figure>
-				<img src="pollo-a-la-parilla.jpg" alt="Pollo a la Parilla" width="350">
+				<img src="images/pollo-a-la-parilla.jpg" alt="Pollo a la Parilla" width="350">
         		<figcaption>Pollo a la Parilla - Chicken grilled to perfection sprinkled with our secret mix of seasonings spices. Fried on the outside and tender on the inside - it’s the tender flavors of Los Pollos Hermanos in your own kitchen!</figcaption>
 			</figure>
 			<figure>
-				<img src="hot-chicken-tenders.jpg" alt="Hot Chicken Tenders" width="350">
+				<img src="images/hot-chicken-tenders.jpg" alt="Hot Chicken Tenders" width="350">
         		<figcaption>Hot Chicken Tenders – These chicken tenders are tasty, breaded, and fried to the perfect golden brown then covered in our hot sauce. This dish is ideal for those who cannot cook their chicken without a pinch of some spices.</figcaption>
 			</figure>
 			<figure>
-        		<img src="sides-fiesta.jpg" alt="Sides Fiesta" width="350">
+        		<img src="images/sides-fiesta.jpg" alt="Sides Fiesta" width="350">
         		<figcaption>Sides Fiesta – Bring out that palatable flavor you never thought could be packed in a side dish! Finally, there is golden fries, buttery corn, and zesty coleslaw that cater for everyone’s taste.</figcaption>
     		</figure>
     		<blockquote>“Eating is not a race but cooking is all about finesse, time, and reverence for your ingredients. Every dish must be served as though it is your best effort.” – Gustavo Fring</blockquote>
