recipes.html changed image sources

--- a/recipes.html
+++ b/recipes.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>BG - Recipes</title>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>BG - Recipes</title>
 </head>
 <body>
     <header>
@@ -19,7 +19,7 @@
         <!-- Recipe 1: Pollo a la Parilla -->
         <article class="recipe-detail">
             <h2>Pollo a la Parilla</h2>
-            <img src="images/pollo_a_la_parilla.jpg" alt="Pollo a la Parilla">
+            <img src="images/pollo-a-la-parilla.jpg" alt="Pollo a la Parilla">
             <h3>Ingredients</h3>
             <ul>
                 <li>4 chicken breasts</li>
@@ -40,7 +40,7 @@
         <!-- Recipe 2: Hot Chicken Tenders -->
         <article class="recipe-detail">
             <h2>Hot Chicken Tenders</h2>
-            <img src="images/hot_chicken_tenders.jpg" alt="Hot Chicken Tenders">
+            <img src="images/hot-chicken-tenders.jpg" alt="Hot Chicken Tenders">
             <h3>Ingredients</h3>
             <ul>
                 <li>500g chicken tenders</li>
@@ -63,7 +63,7 @@
         <!-- Recipe 3: Sides Fiesta -->
         <article class="recipe-detail">
             <h2>Sides Fiesta</h2>
-            <img src="images/sides_fiesta.jpg" alt="Sides Fiesta">
+            <img src="images/sides-fiesta.jpg" alt="Sides Fiesta">
             <h3>Ingredients</h3>
             <ul>
                 <li>2 cups mixed vegetables (corn, bell peppers, black beans)</li>
